--- a/ALaFrancaise.html
+++ b/ALaFrancaise.html
@@ -209,7 +209,7 @@
                 <li> <a href="#"><i class="fas fa-utensils icon"> </i>Proposer un restaurant</a></li>
                 <li> <a href="#"><i class="fas fa-handshake icon"> </i>Devenir partenaire</a></li>
                 <li> <a href="#">Mentions légales</a></li>
-                <li> <a href="#">Contact</a></li>
+                <li> <a href="mailto:contact@ohmyfood.com">Contact</a></li>
             </ul>
     
         </div>
