--- a/LaPaletteDuGout.html
+++ b/LaPaletteDuGout.html
@@ -41,7 +41,7 @@
             <div class="restaurantname centre">
                 <h1>La palette du goût</h1>
 
-                <div class="restaurant--card__like"><i class="fa-regular fa-heart"></i> <i
+                <div class="restaurant--card__like"><i class="fa-regular fa-heart restaurant--card__like--desactivated"></i> <i
                         class="fa-solid fa-heart restaurant--card__like--activated"></i></div>
             </div>
 
@@ -208,7 +208,7 @@
                 <li> <a href="#"><i class="fas fa-utensils icon"> </i>Proposer un restaurant</a></li>
                 <li> <a href="#"><i class="fas fa-handshake icon"> </i>Devenir partenaire</a></li>
                 <li> <a href="#">Mentions légales</a></li>
-                <li> <a href="#">Contact</a></li>
+                <li> <a href="mailto:contact@ohmyfood.com">Contact</a></li>
             </ul>
 
         </div>
