--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                                     <h3>La palette du goût</h3>
                                     <p>Ménilmontant</p>
                                 </div>
-                                <div class="restaurant--card__like"><i class="fa-regular fa-heart"></i> <i
+                                <div class="restaurant--card__like like-index"><i class="fa-regular fa-heart restaurant--card__like--desactivated"></i> <i
                                         class="fa-solid fa-heart restaurant--card__like--activated"></i></div>
                             </div>
                         </div>
@@ -127,7 +127,7 @@
                                     <h3>La note enchantée</h3>
                                     <p>Charonne</p>
                                 </div>
-                                <div class="restaurant--card__like"><i class="fa-regular fa-heart"></i> <i
+                                <div class="restaurant--card__like like-index"><i class="fa-regular fa-heart"></i> <i
                                         class="fa-solid fa-heart restaurant--card__like--activated"></i></div>
 
                             </div>
@@ -144,7 +144,7 @@
                                     <h3>À la française</h3>
                                     <p>Cité Rouge</p>
                                 </div>
-                                <div class="restaurant--card__like"><i class="fa-regular fa-heart"></i> <i
+                                <div class="restaurant--card__like like-index"><i class="fa-regular fa-heart"></i> <i
                                         class="fa-solid fa-heart restaurant--card__like--activated"></i></div>
                             </div>
                         </div>
@@ -161,7 +161,7 @@
                                     <h3>Le délice des sens</h3>
                                     <p>Folie-Méricourt</p>
                                 </div>
-                                <div class="restaurant--card__like"><i class="fa-regular fa-heart"></i> <i
+                                <div class="restaurant--card__like like-index"><i class="fa-regular fa-heart"></i> <i
                                         class="fa-solid fa-heart restaurant--card__like--activated"></i></div>
                             </div>
                         </div>
@@ -186,7 +186,7 @@
                 <li> <a href="#"><i class="fas fa-utensils icon"> </i>Proposer un restaurant</a></li>
                 <li> <a href="#"><i class="fas fa-handshake icon"> </i>Devenir partenaire</a></li>
                 <li> <a href="#">Mentions légales</a></li>
-                <li> <a href="#">Contact</a></li>
+                <li> <a href="mailto:contact@ohmyfood.com">Contact</a></li>
             </ul>
 
         </div>
