alignement coeurs + centrage header + survol menu ok

--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
 
     <!--HEADER-->
     <header>
-        <img src="images/logo/ohmyfood.png" alt="logo OhMyFood" width="200">
+        <nav> 
+            <img src="images/logo/ohmyfood.png" alt="logo OhMyFood" width="200">
+        </nav>
     </header>
 
 
@@ -127,7 +129,7 @@
                                     <h3>La note enchantée</h3>
                                     <p>Charonne</p>
                                 </div>
-                                <div class="restaurant--card__like like-index"><i class="fa-regular fa-heart"></i> <i
+                                <div class="restaurant--card__like like-index"><i class="fa-regular fa-heart restaurant--card__like--desactivated"></i> <i
                                         class="fa-solid fa-heart restaurant--card__like--activated"></i></div>
 
                             </div>
@@ -144,7 +146,7 @@
                                     <h3>À la française</h3>
                                     <p>Cité Rouge</p>
                                 </div>
-                                <div class="restaurant--card__like like-index"><i class="fa-regular fa-heart"></i> <i
+                                <div class="restaurant--card__like like-index"><i class="fa-regular fa-heart restaurant--card__like--desactivated"></i> <i
                                         class="fa-solid fa-heart restaurant--card__like--activated"></i></div>
                             </div>
                         </div>
@@ -161,7 +163,7 @@
                                     <h3>Le délice des sens</h3>
                                     <p>Folie-Méricourt</p>
                                 </div>
-                                <div class="restaurant--card__like like-index"><i class="fa-regular fa-heart"></i> <i
+                                <div class="restaurant--card__like like-index"><i class="fa-regular fa-heart restaurant--card__like--desactivated"></i> <i
                                         class="fa-solid fa-heart restaurant--card__like--activated"></i></div>
                             </div>
                         </div>
